Add css for mobile screen

--- a/recipe-page/styles.css
+++ b/recipe-page/styles.css
@@ -3,3 +3,87 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+@font-face {
+    font-family: outfit;
+    src: url(./assets/fonts/outfit/Outfit-VariableFont_wght.ttf);
+}
+@font-face {
+    font-family: young-serif;
+    src: url(./assets/fonts/young-serif/YoungSerif-Regular.ttf);
+}
+
+body {
+    font-family: outfit;
+    color: hsl(332, 51%, 32%);
+}
+
+/* Header */
+.hero-image {
+    width: 100vw;
+    height: 20vh;
+}
+h1, h2 {
+    font-family: young-serif;
+    margin: 1.5rem 0;
+}
+h1 {
+    font-size: 2.35rem;
+    color: hsl(24, 5%, 18%);
+}
+header, main {
+    padding: 0 2rem;
+}
+p, li {
+    line-height: 1.5;
+    font-size: 1.1rem;
+}
+li {
+    margin: 0.8rem;
+    padding-left: 0.8rem;
+}
+ul {
+    padding: 0 1rem;
+}
+.time {
+    padding: 1rem;
+    margin: 1rem 0;
+    background-color: hsl(330, 100%, 98%);
+    border-radius: 10px;
+}
+.time-duration {
+    font-weight: bold;
+}
+
+/* Main */
+h2 {
+    color: hsl(14, 45%, 36%);
+}
+section {
+    border-bottom: 0.5px solid hsl(30, 18%, 87%);
+    padding: 1rem 0;
+}
+table {
+    width: 100%;
+    margin: 0.7rem 0;
+    border-collapse: collapse;
+}
+tr {
+    border-bottom: 0.5px solid hsl(30, 18%, 87%);
+}
+tr:last-of-type, section:last-of-type {
+    border-bottom: none;
+}
+td {
+    padding: 1rem;
+    text-align: left;
+}
+td:last-child {
+    color: hsl(14, 45%, 36%);
+    font-weight: bold;
+}
+
+/* Footer */
+.attribution { font-size: 11px; text-align: center; }
+.attribution a { color: hsl(228, 45%, 44%); }
+
