--- a/blog-preview-card/styles.css
+++ b/blog-preview-card/styles.css
@@ -4,7 +4,70 @@
     box-sizing: border-box;
 }
 
+@font-face {
+    font-family: 'Figtree';
+    src: url(./assets/fonts/Figtree-VariableFont_wght.ttf);
+}
+
+body {
+    font-family: 'Figtree';
+    background-color: hsl(47, 88%, 63%);
+    height: calc(100vh - 10px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 80%;
+    font-weight: 500;
+}
+main {
+    width: 90vw;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    background-color: white;
+    border-radius: 20px;
+    padding: 1.5rem;
+    box-shadow: 8px 8px 0px rgba(0, 0, 0);
+}
+.card__image img{
+    width: 100%;
+    border-radius: 10px;
+}
+.tag {
+    background-color: hsl(47, 88%, 63%);
+    width: max-content;
+    padding: 0.5rem 1rem;
+    border-radius: 5px;
+    font-weight: 800;
+}
+h1 {
+    font-weight: 800;
+}
+.description {
+    line-height: 1.5;
+    color: hsl(0, 0%, 50%);
+}
+.author img {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+}
+.author {
+    font-weight: 800;
+    display: flex;
+    gap: 0.5rem;
+    align-items: center;
+}
+
 
 /* Attribution */
-.attribution { font-size: 11px; text-align: center; }
-.attribution a { color: hsl(228, 45%, 44%); }
+.attribution { 
+    font-size: 11px; 
+    text-align: center;
+    position: absolute;
+    bottom: 10px;
+    width: 100%;
+}
+.attribution a { 
+    color: hsl(228, 45%, 44%); 
+}
